--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,17 +33,18 @@ jobs:
       # 3. Modifica Environment
       - name: Modifica Environment
         run: |
-          echo "export const environment = {" > ./src/environments/environment.ts
-          echo "  production: true," >> ./src/environments/environment.ts
-          echo "  rapidApi: {" >> ./src/environments/environment.ts
-          echo "    key: '${{ secrets.RAPIDAPI_KEY }}'," >> ./src/environments/environment.ts
-          echo "    host: '${{ secrets.RAPIDAPI_HOST }}'" >> ./src/environments/environment.ts
-          echo "  }" >> ./src/environments/environment.ts
-          echo "};" >> ./src/environments/environment.ts
+          # Reemplazar directamente el contenido del environment
+          sed -i "s|export const environment = {.*}|export const environment = { \
+            production: true, \
+            rapidApi: { \
+              key: '${{ secrets.RAPIDAPI_KEY }}', \
+              host: '${{ secrets.RAPIDAPI_HOST }}' \
+            } \
+          }|g" ./src/environments/environment.ts
 
-      # 3. Verifica el contenido de environment.ts
-      - name: Ver contenido de environment.ts
-        run: cat ./src/environments/environment.ts
+          # Verificar el reemplazo
+          echo "Contenido actualizado:"
+          cat ./src/environments/environment.ts
 
       # 4. Instalar dependencias desde Azure Artifacts
       - name: Install deps
