--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,13 +34,13 @@ jobs:
       - name: Modifica Environment
         run: |
           # Reemplazar directamente el contenido del environment
-          sed -i "s|export const environment = {.*}|export const environment = { \
-            production: true, \
-            rapidApi: { \
-              key: '${{secrets.RAPIDAPI_KEY}}', \
-              host: '${{secrets.RAPIDAPI_HOST}}' \
-            } \
-          }|g" ./src/environments/environment.ts
+          echo "export const environment = {
+            production: true,
+            rapidApi: {
+              key: '${{ secrets.RAPIDAPI_KEY }}',
+              host: '${{ secrets.RAPIDAPI_HOST }}'
+            }
+          };" > ./src/environments/environment.ts
 
           # Verificar el reemplazo
           echo "Contenido actualizado:"
